<resources>
    <string name="app_name">Qmed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user_map">Map</string>

    <string name="google_maps_key">AIzaSyDpAZqEjw9eZSlOXn2pOzGvivWylHHwAnU</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signinbtn">Sign in!</string>
    <string name="sign_in_mail">Enter your mail ...</string>
    <string name="sign_in_password">Enter your password ...</string>
    <string name="sign_up_btn">Register!</string>
    <string name="sign_up_mail">Required Mail ...</string>
    <string name="sign_up_password">Required Password ...</string>
    <string name="sign_up_text_view">Sign in!</string>
    <string name="sign_up_tv">Sign up!</string>
    <string name="title_activity_pharmacy_map">Map</string>
    <string name="request_med">Request a Medicine!</string>
    <string name="acceptBtn">Accept</string>
    <string name="rejectBtn">Reject</string>
    <string name="cname">TextView</string>
    <string name="caddress">TextView</string>
    <string name="cphone">TextView</string>
    <string name="medicine">TextView</string>
    <string name="logoutbtn">Logout</string>
    <string name="req_med">Panadol?</string>
    <string name="hint_txt">Please, enter below the required medicine.</string>
    <string name="find_btn">Find!</string>
    <string name="refresh_btn">Check Request!</string>
    <string name="state">state</string>
    <string name="enter_the_name_of_the_medicine">Enter the name of the medicine</string>
    <string name="search">Search</string>
    <string name="bookbtn">Book</string>
    <string name="orderbtn">Order</string>
    <string-array name="settings">
        <item>Settings</item>
        <item>Change user-name</item>
        <item>Change password</item>
        <item>Change address</item>
        <item>Change phone</item>


    </string-array>

</resources>
