<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <Button
        android:id="@+id/refreshbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:onClick="CheckRequest"
        android:text="@string/refresh_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAction" />

    <TextView
        android:id="@+id/resulttxt"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toTopOf="@+id/refreshbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <Button
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="21dp"
        android:text="@string/bookbtn"
        android:onClick="book"
        app:layout_constraintEnd_toStartOf="@+id/refreshbtn"
        app:layout_constraintTop_toBottomOf="@+id/refreshbtn" />

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/orderbtn"
        android:onClick="order"
        app:layout_constraintStart_toEndOf="@+id/refreshbtn"
        app:layout_constraintTop_toBottomOf="@+id/refreshbtn" />
</android.support.constraint.ConstraintLayout>